--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,79 @@ ul{
   color: var(--text-color);
 }
 
+/* FEATURES */
+
+.features {
+  background: linear-gradient(180deg, #FFFFFF 0%, #F0F1FF 100%);
+  padding-bottom: 84px;
+}
+.features__list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -25px;
+}
+.features__item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  max-width: 350px;
+  width: 100%;
+  margin-left: 25px;
+  margin-bottom: 56px;
+  padding: 64px 32px 40px;
+  box-shadow: 0px 25px 50px rgba(6, 22, 141, 0.0442381);
+  border-radius: 15px;
+  background-color: var(--bg-color);
+}
+
+.features__item:first-child{
+  text-align: left;
+  background: var(--hero-button);
+}
+.features__item:first-child .features__heading{
+  font-weight: 800;
+  font-size: 32px;
+  line-height: 40px;
+  color: var(--bg-color);
+}
+.features__heading {
+  margin-top: 0;
+  margin-bottom: 24px;
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 30px;
+  color: var(--heading-color);
+}
+
+.features__img-wrapper{
+  position: absolute;
+  top: 0;
+  left: 32px;
+  transform: translateY(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  background: var(--hero-button);
+}
+.features__img {
+  display: inline-block;
+  width: 22px;
+  height: 24px;
+}
+.features__text {
+  margin-top: 0;
+  margin-bottom: 24px;
+}
+.features__link {
+  font-weight: 700;
+  color: var(--accent-color);
+  margin-top: auto;
+}
+
 
 
 /* BACKGROUND-IMAGE FOR RETINA SCREENS */
